--- a/src/app/css/variables.scss
+++ b/src/app/css/variables.scss
@@ -1,3 +1,8 @@
-.ui-wrapper {
-  background-color: aquamarine;
-}
+// Colors
+$color-red: #c13f22;
+$color-green: #3b9b6c;
+$color-green-light: #77af9f;
+$color-yellow: #ffd151;
+$color-blue: #649cc8;
+$color-warm-light: #d36e2d;
+$color-warm: #d36e2d;
