--- a/src/app/css/variables.scss
+++ b/src/app/css/variables.scss
@@ -1,8 +1,6 @@
 // Colors
-$color-red: #c13f22;
-$color-green: #3b9b6c;
-$color-green-light: #77af9f;
-$color-yellow: #ffd151;
-$color-blue: #649cc8;
-$color-warm-light: #d36e2d;
-$color-warm: #d36e2d;
+
+$color-background: #eef2f5;
+$color-block-background: #4957b8;
+$color-text: #fff;
+$color-text-light: rgba(#fff, 0.6);
