--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/logo.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta
@@ -9,18 +9,18 @@
             content="Realm"/>
     <meta
             property="og:description"
-            content=""
+            content="Realm project"
     />
     <meta
             property="og:image"
-            content="img/logo.png"
+            content="/assets/logo.png"
     >
     <link rel="icon"
           type="image/png"
-          href="img/logo.png"
+          href="/assets/logo.png"
     >
 
-    <title>Realm</title>
+    <title>Realm 🖥️ 🗿</title>
 
     <link rel="stylesheet" href="font-awesome.min.css">
 </head>
