feat: HiveOS initial design,  redux, dashboard chart chart

--- a/src/app/css/main.scss
+++ b/src/app/css/main.scss
@@ -3,4 +3,7 @@
 @import "variables";
 @import "common";
 @import "worker";
-@import "rig";
+@import "chart";
+@import "dashboard";
+@import "portfolio";
+@import "farm";
