--- a/src/app/css/variables.scss
+++ b/src/app/css/variables.scss
@@ -1,6 +1,7 @@
 // Colors
 
 $color-background: #eef2f5;
-$color-block-background: #4957b8;
+$color-block-background-blue: #4957b8;
+$color-block-background: #fff;
 $color-text: #fff;
 $color-text-light: rgba(#fff, 0.6);
