--- a/src/app/css/common.scss
+++ b/src/app/css/common.scss
@@ -1,23 +1,23 @@
 .ui-wrapper {
-  display: block;
+  display: grid;
+  grid-template-columns: 500px 300px 1fr;
+  grid-template-rows:   1fr 1fr;
   background-color: $color-background;
-  min-height: 100vh;
   color: $color-text-light;
-  font: 16px/1.5 normal normal;
+  font: 12px/1.5 normal normal;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-
-  &__content {
-    display: flex;
-    flex-direction: row;
-  }
 }
 
 .ui-block {
   display: flex;
   flex-direction: column;
-  margin: 10px;
-  background-image: url('../assets/dots.svg');
+  margin: 16px;
   background-color: $color-block-background;
   box-shadow: 0 2px 8px rgba(0,0,0,0.35);
   border-radius: 10px; 
+
+  &_blue {
+    background-image: url('../assets/dots.svg');
+    background-color: $color-block-background-blue;
+  }
 }
