feat: portfolio coins layout

--- a/src/app/css/farm.scss
+++ b/src/app/css/farm.scss
@@ -9,12 +9,19 @@
     display: flex;
     margin: 8px 16px;
     font-size: 16px;
+    align-items: center;
 
     &Logo {
       width: 24px;
       height: 24px;
       margin-right: 8px;
     }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
   }
 
   &__backLogo {
@@ -37,23 +44,32 @@
   border-radius: 8px; 
   padding: 8px;
 
+  &:not(:first-child) {
+    margin-top: auto;
+  }
+
   &__header {
     display: flex;
     margin-left: 8px;
     margin-bottom: 16px; 
+    font-size: 13px;
 
     &Name {
-      margin-right: 8px;
+      margin-right: 16px;
       font-weight: 600;
       text-transform: uppercase;
     }
 
     &Units {
-      margin-right: 8px;
+      margin-right: 16px;
     }
 
     &Hashrate {
-      margin-right: 8px;
+      margin-right: 16px;
+    }
+
+    &Icon {
+      margin-right: 4px;
     }
 
   }
@@ -88,8 +104,9 @@
         width: 100%;
         text-align: center;
         background-color: rgba(255, 255, 255, 0.3);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+        font-weight: 600;
       }
 
       &:not(:first-child) {
@@ -108,7 +125,9 @@
     }
 
     &Temp {
-      
+      &_hottest {
+        color: #ffa800;
+      }
     }
 
     &Fan {
@@ -116,7 +135,6 @@
     }
 
     &Power {
-      
     }
   }
 }
