--- a/src/app/css/common.scss
+++ b/src/app/css/common.scss
@@ -1,6 +1,6 @@
 .ui-wrapper {
   display: grid;
-  grid-template-columns: 500px 300px 1fr;
+  grid-template-columns: 500px 1fr;
   grid-template-rows:   1fr 1fr;
   background-color: $color-background;
   color: $color-text-light;
