--- a/src/app/css/portfolio.scss
+++ b/src/app/css/portfolio.scss
@@ -1,6 +1,83 @@
 .ui-portfolio {
-  grid-column-start: 3;
-  grid-column-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 1;
+
+  &__header {
+    display: flex;
+    align-items: center;
+    margin: 8px 16px;
+    font-size: 16px;
+
+    &Logo {
+      width: 45px;
+      height: 44px;
+      margin-right: 8px;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-evenly;
+    // flex-direction: column;
+
+    &Chart {
+      margin: 0 16px;
+    }
+
+    &Coins {
+      margin: 0 16px;
+      padding: 0;
+      list-style: none;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 4px;
+    }
+  }
+}
+
+.ui-coin {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 8px;
+  padding: 0 8px;
+
+  &_header {
+    padding: 4px 8px;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    text-transform: capitalize;
+    font-weight: 600;
+  }
+
+  &__symbol {
+    width: 60px;
+    margin-right: 16px;
+  }
+
+  &__name {
+    width: 60px;
+    margin-right: 16px;
+  }
+
+  &__holdings {
+    width: 60px;
+    margin-right: 16px;
+    text-align: right;
+  }
+
+  &__value {
+    width: 60px;
+    margin-right: 16px;
+    text-align: right;
+  }
+
+  &__price {
+    width: 60px;
+    text-align: right;
+  }
 }
